RESOLVED FIXED48080
AX: contenteditable nodes do not return correct AXSelectedText* attributes
https://bugs.webkit.org/show_bug.cgi?id=48080
Summary AX: contenteditable nodes do not return correct AXSelectedText* attributes
chris fleizach
Reported 2010-10-21 10:57:30 PDT
If a node is contenteditable and listed as a textbox, it does not return the correct values for AXSelectedText and AXSelectedTextRange.
Attachments
Patch (10.24 KB, patch)
2010-10-21 11:09 PDT, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2010-10-21 11:02:06 PDT
chris fleizach
Comment 2 2010-10-21 11:09:31 PDT
chris fleizach
Comment 3 2010-10-21 12:23:32 PDT
Note You need to log in before you can comment on or make changes to this bug.