AX: contenteditable nodes do not return correct AXSelectedText* attributes https://bugs.webkit.org/show_bug.cgi?id=48080

Reviewed by Beth Dakin.

WebCore:

The ariaSelectedDOMTextRange() method was not returning the correct values.
The fix is to return a plain text range that represents the current selection.

Test: platform/mac/accessibility/content-editable-range-properties.html

* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::accessibilityDescription):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::ariaSelectedTextRange):
(WebCore::AccessibilityRenderObject::selectedText):
(WebCore::AccessibilityRenderObject::selectedTextRange):
* accessibility/AccessibilityRenderObject.h:

LayoutTests:

* platform/mac/accessibility/content-editable-range-properties-expected.txt: Added.
* platform/mac/accessibility/content-editable-range-properties.html: Added.



Canonical link: https://commits.webkit.org/60807@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70256 268f45cc-cd09-0410-ab3c-d52691b4dbfc